--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
             text-color: pink;
             background-color: light blue;
         }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Testing</title>
