--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <style>
+        body{
+            background-color: #004d4d;
+        }
         p{
-            text-color: pink;
-            background-color: light blue;
+            color: pink;
+            background-color: hsl(0,0%, 0%;
         }
     </style>
     <meta charset="UTF-8">
