--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         }
         p{
             color: pink;
-            background-color: hsl(0,0%, 0%;
+            background-color: hsl(0,0%, 0%);
         }
     </style>
     <meta charset="UTF-8">
