--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake v1</title>
-    <link rel="stylesheet" type="text/css" href="snake_game/snake_game.css" />
+    <link rel="stylesheet" type="text/css" href="snake_game.css" />
  </head>   
 <body>
     <div id="gameContainer"></div>
@@ -23,5 +23,5 @@
           <button id="downButton">🔽</button>
         </div>
 </body>
-<script src="snake_game/snake_game.js"></script>
+<script src="snake_game.js"></script>
 </html>
